# image-gen

./: .gitignore  README.md  restart-app-services.sh
.github/workflows/: ci.yml
code/: .env.example  .gitignore  GUIDE.md  __init__.py  mcp-config-cherrystudio.json  mcp-config.json  pyproject.toml  requirements-dev.txt  requirements.txt
code/app/: __init__.py  server.py  settings.py  tools.py  utils.py  web_server.py
code/deploy/: INSTALL.md  deploy.sh  image-cleanup.service  image-cleanup.timer  image-gen.service
tests/: conftest.py  test_security.py  test_smoke.py  test_utils.py
